[gd_scene format=3 uid="uid://b1jos7r4f40bc"]

[ext_resource type="Script" uid="uid://jf465a7umsp8" path="res://NPCs/npc.gd" id="1_0ikh5"]
[ext_resource type="Script" uid="uid://coai26ivs6uv4" path="res://Data/NPCData.gd" id="2_vxakg"]
[ext_resource type="Script" uid="uid://8yo1utsr8bth" path="res://Items/interactable.gd" id="3_k7mck"]
[ext_resource type="Texture2D" uid="uid://bi1lgavhmkq5c" path="res://Interface/UI_icons.png" id="4_k5705"]

[sub_resource type="Resource" id="Resource_k7mck"]
script = ExtResource("2_vxakg")

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_h2f5l"]
radius = 0.7338867
height = 4.8991823

[sub_resource type="SphereShape3D" id="SphereShape3D_w48l3"]
radius = 5.0

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_uamu8"]
shading_mode = 0
albedo_color = Color(0.849446, 5.7371853e-05, 0.6507998, 1)

[sub_resource type="BoxMesh" id="BoxMesh_uamu8"]
material = SubResource("StandardMaterial3D_uamu8")
size = Vector3(0.2, 0.2, 2)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_vymve"]
albedo_color = Color(0.96, 0.56, 0, 0.380392)

[sub_resource type="SphereMesh" id="SphereMesh_qwsqk"]
material = SubResource("StandardMaterial3D_vymve")
height = 1.2

[sub_resource type="SphereMesh" id="SphereMesh_qkxgd"]
material = SubResource("StandardMaterial3D_vymve")
radius = 0.6
height = 4.0

[sub_resource type="AtlasTexture" id="AtlasTexture_xlwy1"]
atlas = ExtResource("4_k5705")
region = Rect2(128, 0, 64, 64)

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_k5705"]
height = 5.3271484

[node name="NPC" type="CharacterBody3D" unique_id=26024771]
process_mode = 3
transform = Transform3D(1.5, 0, 0, 0, 1.5, 0, 0, 0, 1.5, 0, 0, 0)
collision_layer = 131
collision_mask = 131
floor_constant_speed = true
floor_max_angle = 1.4137167
floor_snap_length = 1.0
safe_margin = 0.056
script = ExtResource("1_0ikh5")
npc_data = SubResource("Resource_k7mck")

[node name="NavigationAgent3D" type="NavigationAgent3D" parent="." unique_id=854902024]
process_mode = 1

[node name="CollisionShape3D" type="CollisionShape3D" parent="." unique_id=1590653774]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2.4855292, 0)
shape = SubResource("CapsuleShape3D_h2f5l")

[node name="ProximityDetectArea" type="Area3D" parent="." unique_id=795830790]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.9287833, 0)

[node name="CollisionShape3D" type="CollisionShape3D" parent="ProximityDetectArea" unique_id=1182679659]
shape = SubResource("SphereShape3D_w48l3")

[node name="LookAtNode" type="Node3D" parent="." unique_id=719546373]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -1.0716, 0)

[node name="Head" type="Node3D" parent="." unique_id=2053793809]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2.24999, 0)

[node name="MeshInstance3D" type="MeshInstance3D" parent="Head" unique_id=1511276597]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.06482768, 2.6315293, -1.3503411)
mesh = SubResource("BoxMesh_uamu8")

[node name="MeshInstance3D" type="MeshInstance3D" parent="." unique_id=571848710]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 4.7710776, 0)
mesh = SubResource("SphereMesh_qwsqk")

[node name="MeshInstance3D2" type="MeshInstance3D" parent="." unique_id=748598529]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.9984965, 0)
mesh = SubResource("SphereMesh_qkxgd")

[node name="Interactable" type="Area3D" parent="." unique_id=1997282885]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.0900524, 0)
collision_layer = 4
collision_mask = 0
script = ExtResource("3_k7mck")
id = "npc"
interact_icon = SubResource("AtlasTexture_xlwy1")
interact_text = "Talk"
show_highlight = false

[node name="CollisionShape3D" type="CollisionShape3D" parent="Interactable" unique_id=459875667]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.6635742, 0)
shape = SubResource("CapsuleShape3D_k5705")

[node name="BarkAnchor" type="Node3D" parent="." unique_id=669773913]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 5.752794, 0)

[connection signal="body_entered" from="ProximityDetectArea" to="." method="_on_proximity_detect_area_body_entered"]
[connection signal="body_exited" from="ProximityDetectArea" to="." method="_on_proximity_detect_area_body_exited"]
